--- a/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/main/DeskClock.apk/res/values-cs/strings.xml
@@ -6,10 +6,10 @@
 <string name="add_alarm">Přidat budík</string>
 <string name="menu_desk_clock">Stolní hodiny</string>
 <string name="menu_edit_alarm">Upravit budík</string>
-<string name="delete_alarm">Smazat budík</string>
+<string name="delete_alarm">Smazat budík(y)</string>
 <string name="enable_alarm">Zapnout budík</string>
 <string name="disable_alarm">Vypnout budík</string>
-<string name="delete_alarm_confirm">Tento budík bude smazán.</string>
+<string name="delete_alarm_confirm">Opravdu chcete smazat?</string>
 <string name="show_clock">Ukázat hodiny</string>
 <string name="hide_clock">Skrýt hodiny</string>
 <string name="label">Popis</string>
@@ -26,10 +26,10 @@
 <string name="day">1 den</string>
 <string name="days">%s dní</string>
 <string name="hour">1 hodina</string>
-<string name="hours">%s hodin</string>
+<string name="hours">%s hod.</string>
 <string name="minute">1 minuta</string>
-<string name="minutes">%s minut</string>
-<string name="every_day">každý den</string>
+<string name="minutes">%s min.</string>
+<string name="every_day">Každý den</string>
 <string name="never">Nikdy</string>
 <string name="day_concat">", "</string>
 <string name="clock_instructions">Vybrat hodiny</string>
@@ -73,7 +73,7 @@
 <string name="stop_watch">Stopky</string>
 <string name="easter_eggs_string">LewaROM má rok!</string>
 <string name="alarm">Budík</string>
-<string name="world_clock">Světové hodiny</string>
+<string name="world_clock">Mezinárodní čas</string>
 <string name="stopwatch">Stopky</string>
 <string name="timer">Časovač</string>
 <string name="add">Přidat</string>
@@ -85,14 +85,14 @@
 <string name="tomorrow">Zítra</string>
 <string name="addworld_clock_city_hint">Vyhledat město časového pásma</string>
 <string name="delete_city">Smazat město</string>
-<string name="delete_city_confirm">Potvrdit smazání</string>
+<string name="delete_city_confirm">Opravdu chcete smazat vybrané?</string>
 <string name="snooze">Odložit</string>
 <string name="close_alarm">Zavřít</string>
 <string name="start">Start</string>
 <string name="pause">Pauza</string>
-<string name="reset">Reset</string>
+<string name="reset">Resetovat</string>
 <string name="timer_continue">Pokračovat</string>
-<string name="lap">Mezičas</string>
+<string name="lap">Kolo</string>
 <string name="timer_hour">Hod</string>
 <string name="timer_minute">Min</string>
 <string name="timer_second">Sec</string>
@@ -100,16 +100,16 @@
 <string name="one_minute">1 minuta</string>
 <string name="five_minute">5 minut</string>
 <string name="ten_minute">10 minut</string>
-<string name="timer_ring">Upozornění</string>
-<string name="timer_init_start">"Posunutím začnete"</string>
+<string name="timer_ring">Vyzváněcí tón:</string>
+<string name="timer_init_start">"Posunem do strany nastavte délku času"</string>
 <string name="timer_time_up">Čas vypršel</string>
 <string name="timer_time_up_ok">Známý</string>
 <string name="delete_selected">Vybráno %s</string>
-<string name="alarm_empty_text">Stiskem tlačítka níže přidáte Budík</string>
-<string name="world_clock_empty_text">Stiskem tlačítka níže přidáte Budík</string>
+<string name="alarm_empty_text">Stiskem tlačítka níže přidáte budík</string>
+<string name="world_clock_empty_text">Stiskem tlačítka níže přidáte čas</string>
 <string name="add_city">Přidat zónu</string>
-<string name="could_not_add_more_lap_time">Nelze provést, maximálně lze pořídit 99 mezičasů.</string>
-<string name="menu_actionbar_selected_items">%s vybráno</string>
+<string name="could_not_add_more_lap_time">Již nelze provést, maximálně lze změřit 99 kol.</string>
+<string name="menu_actionbar_selected_items">Vybráno: %s</string>
 <string name="menu_multichoice_select_all">Vybrat vše</string>
 <string name="menu_multichoice_clear_select">Zrušit výběr</string>
 </resources>
