--- a/main/LewaLauncherX.apk/res/values-sk/strings.xml
+++ b/main/LewaLauncherX.apk/res/values-sk/strings.xml
@@ -1,114 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-<string name="config_workspaceDefaultTransitionEffect">Standard</string>
-<string name="application_name">Launcher</string>
-<string name="folder_name">Priečinok</string>
-<string name="chooser_wallpaper">Vybrať tapetu z</string>
-<string name="wallpaper_instructions">Nastaviť tapetu</string>
-<string name="pick_wallpaper">Tapety</string>
-<string name="activity_not_found">Aplikácia nie je nainštalovaná.</string>
-<string name="long_press_widget_to_add">Podržte a presuňte na plochu</string>
-<string name="widget_dims_format">%1$d x %2$d</string>
-<string name="external_drop_widget_pick_format">%1$s (%2$d x %3$d)</string>
-<string name="group_applications">Aplikácie</string>
-<string name="out_of_space">Nie je miesto na domovskej obrazovke.</string>
-<string name="shortcut_installed">Odkaz \"%s\" vytvorený.</string>
-<string name="shortcut_uninstalled">Odkaz \"%s\" bol zrušený.</string>
-<string name="shortcut_duplicate">Odkaz \"%s\" už existuje.</string>
-<string name="title_select_application">Vybrať aplikáciu</string>
-<string name="delete_target_label">Odstrániť</string>
-<string name="uninstall_target_label">Odinštalovať</string>
-<string name="menu_manage_apps">Spravovať aplikácie</string>
-<string name="menu_wallpaper">Tapeta</string>
-<string name="menu_settings">Systémová nastavenia</string>
-<string name="permlab_install_shortcut">inštalovať odkazy</string>
-<string name="permdesc_install_shortcut">Dovoliť aplikácií pridať zástupcu bez zásahu uživateľa.</string>
-<string name="permlab_uninstall_shortcut">odinštalovať odkazy</string>
-<string name="permdesc_uninstall_shortcut">Dovoliť aplikácií zrušiť zástupcu bez zásahu uživateľa.</string>
-<string name="permlab_read_settings">načítať domovské nastavenia a zástupcov</string>
-<string name="permdesc_read_settings">Dovoliť aplikácií načítať nastavenia a zástupcov.</string>
-<string name="permlab_write_settings">zapísať domovské nastavenia a zástupcov</string>
-<string name="permdesc_write_settings">Dovoliť aplikácií meniť nastavenia a zástupcov.</string>
-<string name="gadget_error_text">Chyba pri načítaní widgetu</string>
-<string name="default_scroll_format">Strana %1$d z %2$d</string>
-<string name="workspace_scroll_format">Obrazovka %1$d z %2$d</string>
-<string name="apps_customize_apps_scroll_format">Aplikácia strana %1$d z %2$d</string>
-<string name="apps_customize_widgets_scroll_format">Widgety strana %1$d z %2$d</string>
-<string name="cannot_add_more_screen">"Už nie je možné pridať viac obrazoviek"</string>
-<string name="editmode_tip">Nie je možné vymazať obrazovku pretože ste dosiahli minimálny počet obrazoviek</string>
-<string name="menu_preview">Ukážka</string>
-<string name="menu_edit">Widgety</string>
-<string name="menu_desktop_settings">Domovské nastavenia</string>
-<string name="pref_desktop_effect">Prechodový efekt</string>
-<string name="pref_screen_layout">Rozvrhnutie obrazovky</string>
-<string name="pref_screen_layout_summary">Vybrať rozvrhnutie ikón na ploche</string>
-<string name="pref_desktop_effect_summary">Posúvací efekt pri zmene obrazovky</string>
-<string name="pref_title_wallpaper_scrolling">Posúvanie tapety</string>
-<string name="pref_summary_wallpaper_scrolling">Posúvanie tapety spoločne s plochou</string>
-<string name="pref_title_action_updown">Desktop gestá</string>
-<string name="pref_summary_action_updown">Z plochy posunom nahor otvoríte menu a posunom nadol otvoríte oznámenia</string>
-<string name="pref_title_openapprecommend">Odporúčané</string>
-<string name="pref_summary_openapprecommend">Zobrazovať odporúčania (vypnite!)</string>
-<string name="pref_title_resetlauncher">Resetovať Launcher</string>
-<string name="pref_summary_resetlauncher">Resetovať Launcher</string>
-<string name="message_resetlauncher">Obnoviť všetky ikony, widgety a pozíciu obrazovky.</string>
-<string name="pref_title_resethotseats">Obnoviť Hotseats</string>
-<string name="pref_summary_resethotseats">Obnoviť hotseats do inicializačného stavu.</string>
-<string name="message_resethotseats">Obnoviť hotseats do inicializačného stavu?</string>
-<string name="pref_label_settings">Nastavenia LeWa Launcher</string>
-<string name="folder_full_hint">Priečinok je plný.</string>
-<string name="shortcut_phone">Telefón</string>
-<string name="shortcut_contacts">Kontakty</string>
-<string name="shortcut_drawer">Aplikácie</string>
-<string name="shortcut_browser">Prehliadač</string>
-<string name="shortcut_messaging">Správy</string>
-<string name="phone_intent">\#Intent;action=android.intent.action.DIAL;launchFlags=0x10000000;end</string>
-<string name="contacts_intent">content://com.android.contacts/contacts#Intent;action=android.intent.action.VIEW;launchFlags=0x10000000;end</string>
-<string name="drawer_intent">\#Intent;action=com.lewa.launcher.SHOW_DRAWER;end</string>
-<string name="browser_intent">http://www.google.com#Intent;action=android.intent.action.VIEW;launchFlags=0x10000000;end</string>
-<string name="messaging_intent">\#Intent;action=android.intent.action.MAIN;type=vnd.android-dir/mms-sms;launchFlags=0x10000000;end</string>
-<string name="lewabbs_intent">http://bbs.lewaos.com/forum.php?mobile=yes#Intent;action=android.intent.action.VIEW;end</string>
-<string name="uninstall_system_app_text">Systémová aplikácia nemôže byť odinštalovaná.</string>
-<string name="uninstall_widget_text">Widget nemôže byť odinštalovaný.</string>
-<string name="cannot_delete_widget_text">Widget nemôže byť vymazaný.</string>
-<string name="cannot_delete_app_text">Aplikácia nemôže byť vymazaná.</string>
-<string name="restore_drawer_hint">Vykresľovač ikony môže byť obnovený z nastavenia menu.</string>
-<string name="system_tool_folder">Nástroje</string>
-<string name="recent_installed_apps">Naposledy nainštalované</string>
-<string name="no_installed_apps">Nič inštalovamé</string>
-<string name="new_rom_hint">Nový</string>
-<string name="onekey_lockscreen">Zámok obrazovky</string>
-<string name="other_widgets">Iné widgety</string>
-<string name="admin_description">Umožniť widgetu s právom administrátora odblokovať zámok obrazovky pri prvom spustení.</string>
-<string name="system_groupname_widget">Widgety</string>
-<string name="system_groupname_all">Všetky</string>
-<string name="system_groupname_all_application">Všetky aplikácie</string>
-<string name="system_groupname_system">Systém</string>
-<string name="system_groupname_security">Zabezpečenie</string>
-<string name="system_groupname_game">Hry</string>
-<string name="system_groupname_play">Zábava</string>
-<string name="system_groupname_tool">Nástroje</string>
-<string name="system_groupname_other">Ostatné</string>
-<string name="lewaos_bbs">Lewa BBS</string>
-<string name="menu_scene">scéna</string>
-<string name="apprecommend_net_not">Opakovať pokiaľ nie je sieťové pripojenie. Odporúča sa kontrolovať sieť.</string>
-<string name="apprecommend_sd_not">Nie je možné prevziať pretože SD karta neexistuje</string>
-<string name="apprecommend_net_error">Chyba siete, vyskúšajte neskôr prosím</string>
-<string name="apprecommend_recommendation">Odporúčané</string>
-<string name="apprecommend_native">Aplikácie</string>
-<string name="apprecommend_download">Prevziať</string>
-<string name="apprecommend_downloading">Preberám</string>
-<string name="apprecommend_pause">Prerušiť</string>
-<string name="apprecommend_continue">Pokračovať</string>
-<string name="apprecommend_cancle">Zrušiť</string>
-<string name="apprecommend_source">Vstup: </string>
-<string name="apprecommend_notlike">nepáči</string>
-<string name="apprecommend_pop_downloadconut">počet inštalácií</string>
-<string name="apprecommend_show_text">Nevyhnutné inštalácie</string>
-<string name="apprecommend_download_max">Max 3 preberania</string>
-<string name="apprecommend__install_success">Inštalácia prebehla úspešne</string>
-<string name="apprecommend__unlike_all">Momentálne nepatrí medzi odporúčané aplikácie</string>
-<string name="pull_to_refresh_pull_label">Potiahnutím sa aktualizuje</string>
-<string name="pull_to_refresh_release_label">Uvolnením sa aktualizuje</string>
-<string name="pull_to_refresh_refreshing_label">Načítavam ...</string>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
+    <string name="app_name">鸟瞰</string>
+    <string name="mb">MB</string>
+    <string name="gb">GB</string>
+    <string name="nosim">Žiadny prenos dát</string>
+    <string name="used">Použitých</string>
+    <string name="surplus">Ostáva</string>
+    <string name="noalarm">Pridať budík</string>
+    <string name="off">Vyp</string>
+    <string name="on">Zap</string>
+    <string name="alarm">Budík</string>
+    <string name="power_on">Šetrenie</string>
+    <string name="power_surplus">Ostáva</string>
+    <string name="power_full">Nabíja sa</string>
+    <string name="power_isfull">Batéria nabitá</string>
+    <string name="power_h">h</string>
+    <string name="power_m">m</string>
+    <string name="torch">Svetlo</string>
+    <string name="safe_scanning">Prehľadávam...</string>
+    <string name="safe_status_one">Bezpečné</string>
+    <string name="safe_status_two">"dní bez kontroly"</string>
+    <string name="safe_status_three">Nikdy neskontrolované</string>
+    <string name="clean_toast_str0"> Prebehla optimalizácia</string>
+    <string name="clean_toast_str1">"Úspešne uvoľnených %1$d M pamäte
+Aktuálne dostupnej pamäte je %2$d M"</string>
+    <string name="config_workspaceDefaultTransitionEffect">Štandard</string>
+    <string name="application_name">Launcher</string>
+    <string name="home">Domovské</string>
+    <string name="uid_name">Apl. android jadra</string>
+    <string name="folder_name">Zložka</string>
+    <string name="chooser_wallpaper">Vybrať tapetu z</string>
+    <string name="wallpaper_instructions">Nastaviť tapetu</string>
+    <string name="pick_wallpaper">Tapety</string>
+    <string name="activity_not_found">"Aplikácia nie je nainštalovaná."</string>
+    <string name="widgets_tab_label">Widgety</string>
+    <string name="widget_dims_format">%1$d x %2$d</string>
+    <string name="external_drop_widget_pick_format">%1$s (%2$d x %3$d)</string>
+    <string name="external_drop_widget_error">"Nie je možné umiestniť položku na túto obrazovku."</string>
+    <string name="external_drop_widget_pick_title">Vybrať widget a vytvoriť</string>
+    <string name="rename_folder_title">premenovať</string>
+    <string name="menu_item_add_item">Pridať na obrazovku</string>
+    <string name="group_applications">Aplikácie</string>
+    <string name="group_shortcuts">Zástupci</string>
+    <string name="group_widgets">Widgety</string>
+    <string name="group_wallpapers">Tapety</string>
+    <string name="completely_out_of_space">Nie je miesto na obrazovke.</string>
+    <string name="out_of_space">Nie je miesto na obrazovke.</string>
+    <string name="hotseat_out_of_space">Nie je miesto na umiestnenie.</string>
+    <string name="invalid_hotseat_item">Tento widget je moc veľký na umiestnenie.</string>
+    <string name="shortcut_installed">Zástupca \"%s\" vytvorený.</string>
+    <string name="shortcut_uninstalled">Zástupca \"%s\" bol odstránený.</string>
+    <string name="shortcut_duplicate">Zástupca \"%s\" už existuje.</string>
+    <string name="title_select_shortcut">Výber zástupcu</string>
+    <string name="title_select_application">Výber aplikácie</string>
+    <string name="menu_theme">Motívy</string>
+    <string name="menu_wallpaper">Tapeta</string>
+    <string name="menu_settings">Systémové nastavenia</string>
+    <string name="cab_menu_delete_app">Odobrať aplikáciu</string>
+    <string name="cab_menu_app_info">Podrobnosti o aplikácií</string>
+    <string name="cab_app_selection_text">1 aplikácia označená</string>
+    <string name="cab_widget_selection_text">1 widget označený</string>
+    <string name="cab_folder_selection_text">1 zložka označená</string>
+    <string name="cab_shortcut_selection_text">1 zástupca označený</string>
+	<string name="permlab_install_shortcut">inštalovať odkazy</string>
+	<string name="permdesc_install_shortcut">Dovoliť aplikácií pridať zástupcu bez zásahu uživateľa.</string>
+	<string name="permlab_uninstall_shortcut">odinštalovať odkazy</string>
+	<string name="permdesc_uninstall_shortcut">Dovoliť aplikácií zrušiť zástupcu bez zásahu uživateľa.</string>
+	<string name="permlab_read_settings">načítať domovské nastavenia a zástupcov</string>
+	<string name="permdesc_read_settings">Dovoliť aplikácií načítať nastavenia a zástupcov.</string>
+	<string name="permlab_write_settings">zapísať domovské nastavenia a zástupcov</string>
+	<string name="permdesc_write_settings">Dovoliť aplikácií meniť nastavenia a zástupcov.</string>
+    <string name="gadget_error_text">Problem loading widget</string>
+    <string name="folder_hint_text">Zložka</string>
+    <string name="workspace_description_format">Obrazovka %1$d</string>
+    <string name="default_scroll_format">Strana %1$d z %2$d</string>
+    <string name="workspace_scroll_format">Obrazovka %1$d z %2$d</string>
+    <string name="folder_opened">Zložka otvorená, %1$d od %2$d</string>
+    <string name="folder_tap_to_close">Dotykom zavrete zložku</string>
+    <string name="folder_tap_to_rename">Dotykom uložíte premenovanie</string>
+    <string name="folder_closed">Zložka zavretá</string>
+    <string name="folder_renamed">Zložka premenovaná na %1$s</string>
+    <string name="folder_name_format">Zložka: %1$s</string>
+    <string name="cannot_add_more_screen">"Už nie je možné pridať viac obrazoviek"</string>
+    <string name="cannot_delete_more_screen">Nie je už viac obrazoviek na vymazanie.</string>
+	<string name="menu_preview">Ukážka</string>
+	<string name="menu_edit">Widgety</string>
+	<string name="menu_desktop_settings">Domovské nastavenia</string>
+	<string name="pref_desktop_effect">Prechodový efekt</string>
+	<string name="pref_screen_layout">Rozvrhnutie obrazovky</string>
+	<string name="pref_screen_layout_summary">Vybrať rozvrhnutie ikón na ploche</string>
+	<string name="pref_desktop_effect_summary">Posúvací efekt pri zmene obrazovky</string>
+	<string name="pref_title_wallpaper_scrolling">Posúvanie tapety</string>
+	<string name="pref_summary_wallpaper_scrolling">Posúvanie tapety spoločne s plochou</string>
+	<string name="pref_title_action_updown">Desktop gestá</string>
+	<string name="pref_summary_action_updown">Z plochy posunom nahor otvoríte menu a posunom nadol otvoríte oznámenia</string>
+    <string name="pref_title_lewa_lockscreen">Použiť zámok obrazovky Lewa</string>
+    <string name="pref_hide_status_bar">Skryť stavovú lištu pri uzamknutí</string>
+    <string name="pref_title_resetlauncher">Resetovať Launcher</string>
+    <string name="pref_summary_resetlauncher">Resetovať Launcher</string>
+    <string name="pref_title_update">Hľadať aktualizáciu</string>
+    <string name="pref_summary_update">Zistí, či je nainštalovaná najnovšia verzia Lewa Launcher</string>
+    <string name="message_resetlauncher">Obnoviť všetky ikony, widgety a pozíciu obrazovky.</string>
+    <string name="pref_label_settings">Nastavenia LewaLauncher</string>
+    <string name="folder_full_hint">Táto zložka je plná.</string>
+    <string name="shortcut_phone">Telefón</string>
+    <string name="shortcut_contacts">Kontakty</string>
+    <string name="shortcut_browser">Prehliadač</string>
+    <string name="shortcut_messaging">Správy</string>
+    <string name="loading_prompt">Načítavam...</string>
+	<string name="uninstall_system_app_text">Systémová aplikácia nemôže byť odinštalovaná.</string>
+	<string name="uninstall_widget_text">Widget nemôže byť odinštalovaný.</string>
+	<string name="cannot_delete_widget_text">Widget nemôže byť vymazaný.</string>
+	<string name="cannot_delete_app_text">Aplikácia nemôže byť vymazaná.</string>
+    <string name="system_tool_folder">Nástroje</string>
+    <string name="system_secrity_folder">Systém</string>
+    <string name="new_rom_hint">Nový</string>
+    <string name="add_widget">Pridať widget</string>
+    <string name="folder_not_empty_hint">Zložka nie je prázdna, po vyčistený skúste opäť.</string>
+    <string name="image_content">obsah obrázka</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Zrušiť</string>
+    <string name="uninstall_done">Odobratie ukončené.</string>
+    <string name="uninstall_failed">Odobratie neúspešné.</string>
+    <string name="uninstall_failed_msg">"%1$s nemôže byť odobratá."</string>
+    <string name="uninstall_application_text">Naozaj odobrať túto aplikáciu?</string>
+    <string name="uninstall_failed_device_policy_manager">"Nie je možné odobrať pretože tento balík je aktívne zariadenie správcu systému."</string>
+    <string name="uninstall_app_not_found_text">"Aplikácia nebola nájdená v zozname inštalovaných aplikácií."</string>
+    <string name="uninstall_application_title">Odobrať aplikáciu</string>
+    <string name="uninstall_update_title">Odobrať aktualizáciu</string>
+    <string name="uninstall_activity_text">%1$s je súčasť nasledovnej aplikácie:</string>
+    <string name="uninstall_update_text">Naozaj chcete prepísať túto aplikáciu továrenskou verziou?</string>
+    <string name="app_not_found_dlg_text">"Aplikácia nebola nájdená v zozname nainštalovaných aplikácií."</string>
 </resources>
