--- a/main/LewaNetworkManager.apk/res/values-sk/strings.xml
+++ b/main/LewaNetworkManager.apk/res/values-sk/strings.xml
@@ -49,7 +49,8 @@
 <string name="pref_adjust_settings">Synchronizovať automaticky</string>
 <string name="pref_adjust_regularly">Synchronizovať využitie dát</string>
 <string name="background_warning_title">Upozornenie:  sťahovanie dát na pozadí</string>
-<string name="background_warning_content">"Sťahovanie dát na pozadí prekročilo 1 MB, zatvorite niektoré aplikácie"</string>
+<string name="background_warning_content">"Sťahovanie dát na pozadí prekročilo 1 MB
+, zatvorite niektoré aplikácie"</string>
 <string name="background_warning_close_content">Keď vypnete toto varovanie, nebudete informovaný o sťahovaní dát na pozadí. Ste si istí, mám  to vypnúť?</string>
 <string name="pref_data_warning">Zostáva málo dát</string>
 <string name="notify_data_warning">Vaše dáta budú čoskoro vyčerpané</string>
@@ -72,8 +73,10 @@
 <string name="notify_data_pack_summary">@string/widget_data_pack_warning</string>
 <string name="permlab_manageNetworkPolicy">upraviť zabezpečenie siete</string>
 <string name="permdesc_manageNetworkPolicy">Povoliť aplikácii upravovať zabezpečenie siete a pridávať pravidla aplikácií.</string>
-<string name="data_usage_sweep_warning"><font size="21">^1</font> <font size="9">^2</font>""<font size="12">upozornenie</font></string>
-<string name="data_usage_sweep_limit"><font size="21">^1</font> <font size="9">^2</font>""<font size="12">limit</font></string>
+<string name="data_usage_sweep_warning"><font size="21">^1</font> <font size="9">^2</font>"
+"<font size="12">upozornenie</font></string>
+<string name="data_usage_sweep_limit"><font size="21">^1</font> <font size="9">^2</font>"
+"<font size="12">limit</font></string>
 <string name="data_usage_total_during_range">%2$s: about %1$s využitých</string>
 <string name="data_usage_disclaimer">"Merané vaším mobilom. Počítanie využitia dát operátorom sa môže líšiť."</string>
 <string name="data_usage_empty">Žiadna aplikácia neyužila dáta počas tohoto obdobia.</string>
@@ -94,7 +97,9 @@
 <string name="data_usage_restrict_denied_dialog">"Obmedzenie dát na pozadí je možné len v prípade ak máte nastavený limit mobilných dát."</string>
 <string name="data_usage_restrict_background_title">Obmedziť dáta bežiace na pozadí?</string>
 <string name="data_usage_restrict_background">"Ak obmedzíte mobilné dáta bežiace na pozadí, niektoré aplikácie a služby nebudú môcť pracovať pokiaľ nebudete pripojený k sieti WiFi."</string>
-<string name="data_usage_app_restrict_dialog">"Táto vlastnosť môže zapríčiniť, že aplikácia ktorá je závislá na datách bežiacich na pozadí prestane pracovať keď WiFi signál nebude dostupný. V nastavenich sú ovládacie prvky k dispozícií pre každú aplikáciu kde je možnosť nastaviť vhodné dátové použitie."</string>
+<string name="data_usage_app_restrict_dialog">"Táto vlastnosť môže zapríčiniť, že aplikácia ktorá je závislá na datách bežiacich na pozadí prestane pracovať keď WiFi signál nebude dostupný..
+
+V nastavenich sú ovládacie prvky k dispozícií pre každú aplikáciu kde je možnosť nastaviť vhodné dátové použitie."</string>
 <string name="data_config_title">Sieťové oprávnenia</string>
 <string name="data_config_mobile">2G/3G</string>
 <string name="data_config_background">Povoľ dáta na pozadí</string>
