--- a/main/SystemUI.apk/res/values-sk/strings.xml
+++ b/main/SystemUI.apk/res/values-sk/strings.xml
@@ -2,7 +2,8 @@
 <!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
 <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
 <string name="config_systemBarComponent">com.android.systemui.statusbar.tablet.TabletStatusBar</string>
-<string name="status_bar_date_formatter">"%2$s %1$s"</string>
+<string name="status_bar_date_formatter">"%2$s
+%1$s"</string>
 <string name="gemini_default_sim_always_ask">Vždy sa opýtať</string>
 <string name="accessibility_phone_four_bars">Štyri čiarky signálu telefónnej siete.</string>
 <string name="sim_switch_tip">Táto SIM je nastavená ako východzia pre %s. Pre zmenu SIM podržte a stiahnite stavový riadok.</string>
@@ -47,7 +48,9 @@
 <string name="data_usage_disabled_dialog_4g_title">Dátové prenosy 4G sú zakázané</string>
 <string name="data_usage_disabled_dialog_mobile_title">Mobilné dátové prenosy sú zakázané</string>
 <string name="data_usage_disabled_dialog_title">Dáta boli zakázané</string>
-<string name="data_usage_disabled_dialog">"Dosiahli ste stanovený limit využitia dát.Ak dátové pripojenie znova povolíte, môže vám váš operátor účtovať poplatky."</string>
+<string name="data_usage_disabled_dialog">"Dosiahli ste stanovený limit využitia dát.
+
+Ak dátové pripojenie znova povolíte, môže vám váš operátor účtovať poplatky."</string>
 <string name="data_usage_disabled_dialog_enable">Znova povoliť dátové prenosy</string>
 <string name="status_bar_clear_all_button">Vymazať</string>
 <string name="status_bar_latest_events_title">Upozornenia</string>
@@ -67,7 +70,8 @@
 <string name="status_bar_accessibility_dismiss_recents">Odmietnuť nové aplikácie</string>
 <string name="status_bar_no_notifications_title">Žiadne upozornenia</string>
 <string name="status_bar_ongoing_events_title">Prebiehajúce</string>
-<string name="invalid_charger">"Nabíjanie pomocou rozhrania USB nie je podporované.Používajte iba nabíjačku, ktorá bola dodaná spolu so zariadením."</string>
+<string name="invalid_charger">"Nabíjanie pomocou rozhrania USB nie je podporované.
+Používajte iba nabíjačku, ktorá bola dodaná spolu so zariadením."</string>
 <string name="status_bar_settings_settings_button">Nastavenia</string>
 <string name="status_bar_settings_wifi_button">Wi-Fi</string>
 <string name="status_bar_settings_airplane">Režim lietadlo</string>
@@ -133,6 +137,7 @@
 <string name="accessibility_wimax_signal_full">Plný signál siete WiMAX.</string>
 <string name="accessibility_data_connection_gprs">GPRS</string>
 <string name="accessibility_data_connection_3g">3G</string>
+<string name="accessibility_data_connection_3.5g">3.5G</string>
 <string name="accessibility_data_connection_4g">4G</string>
 <string name="accessibility_data_connection_cdma">CDMA</string>
 <string name="accessibility_data_connection_edge">Edge</string>
@@ -160,6 +165,8 @@
 <string name="notifications_off_title">Vypnúť oznamovania</string>
 <string name="notifications_off_text">Ťuknutím tu zapnete oznamovania</string>
 <string name="accessibility_rotation_lock_off">Obrazovka sa bude automaticky otáčať.</string>
+<string name="menu_actionbar_selected_items">%s označených</string>
+<string name="lewa_status_bar_settings_battery_meter_format">%d</string>
 <string name="status_bar_settings_battery_meter_min_format">%d</string>
 <string name="poputip_title1">Oznámenie od</string>
 <string name="poputip_title2">Zákaz</string>
@@ -212,6 +219,7 @@
 <string name="recent_usedmem">Využitá pamäť:</string>
 <string name="phonestatusbarsettings_title">Nastavania pozície prepínača</string>
 <string name="trans_statusbar_setting">Priehľadný stavový riadok</string>
+<string name="trans_statusbar_key">trans_statusbar_key</string>
 <string name="notifilter_header">preventívne oznamovať</string>
 <string name="notifilter_tail">preventívne neoznamovať</string>
 <string name="notifilter_setting">Nastavenia oznámení</string>
@@ -232,4 +240,7 @@
 <string name="notifilter_item_activity">Správca oznámení</string>
 <string name="notifilter_cloudloading">Načítanie cloudu...</string>
 <string name="notifilter_cloudlasttime">Čas posledného prebratia:</string>
+<string name="otg_to_filemanager">Stlačením enter správca súborov</string>
+<string name="otg_connect">USB zariadenie je pripojené</string>
+<string name="otg_unmount">Bezpečne odobrať</string>
 </resources>
