--- a/main/LewaSecurity2.apk/res/values-sk/strings.xml
+++ b/main/LewaSecurity2.apk/res/values-sk/strings.xml
@@ -7,29 +7,29 @@
 <string name="app_intercept">Blokovač</string>
 <string name="app_clearance">Vyčistenie systému</string>
 <string name="app_auto_start">Automatické spustenie</string>
-<string name="app_notification_manager">Nastavení oznámení</string>
+<string name="app_notification_manager">Nastavenie oznámení</string>
 <string name="app_antitheft">Ochrana proti krádeži</string>
 <string name="app_perm_manager">Nastavenie oprávnení</string>
 <string name="intercept_details">Hovory: %1$s, Správy: %2$s</string>
 <string name="clearance_details">%1$s: Využité %2$s</string>
 <string name="clearance_checking">Kontrola odkladacieho súboru</string>
-<string name="auto_start_details">Aplikácie které by maly byť ukončené: %1$s</string>
-<string name="auto_start_check_info">Auto. spustené aplik. které by maly byť ukončené: %1$s</string>
+<string name="auto_start_details">Počet aplikácii, ktoré je možné ukončiť: %1$s</string>
+<string name="auto_start_check_info">Počet aplikácii, ktoré je možné ukončiť: %1$s</string>
 <string name="auto_start_checing">Kontrolujem automaticky spustené</string>
-<string name="perm_manager_details">Aplikácie ktoré majú citlivé oprávnenia: %1$s</string>
+<string name="perm_manager_details">Počet aplikácií s citlivými oprávneniami: %1$s</string>
 <string name="notification_manager_open">Prístup do cloudu je otevrený</string>
 <string name="notification_manager_close">Prístup do cloudu je uzavretý</string>
 <string name="notification_black_number">Aplikácie které boli zablokované: %1$d</string>
 <string name="antitheft_close">Ochrana proti krádeži je vypnutá.</string>
 <string name="antitheft_open">Ochrana proti krádeži je zapnutá.</string>
 <string name="gap_notice">Posledná kontrola pred: %s</string>
-<string name="virus_details">Nájdených vírov: %1$d</string>
-<string name="virus_has_been_deleted">Odstranených vírov: %1$d</string>
+<string name="virus_details">Nájdených vírusov: %1$d</string>
+<string name="virus_has_been_deleted">Odstranených vírusov: %1$d</string>
 <string name="virus_has_been_scanned">Kontrola bola dokončená</string>
 <string name="virus_checking">Kontrolujem ...</string>
 <string name="virus_optimizing_progress">prehľadávam %s</string>
-<string name="first_use">Tvoj telefón nikdy nebyl kontrolováný</string>
-<string name="scan_just_now">Práve bolo skontrolové</string>
+<string name="first_use">Váš telefón nikdy nebol skontrolovaný</string>
+<string name="scan_just_now">Práve bolo skontrolované</string>
 <string name="days">d</string>
 <string name="hours">h</string>
 <string name="minutes">m</string>
