--- a/main/SystemUI.apk/res/values-sk/strings.xml
+++ b/main/SystemUI.apk/res/values-sk/strings.xml
@@ -8,9 +8,9 @@
 <string name="accessibility_phone_four_bars">Štyri čiarky signálu telefónnej siete.</string>
 <string name="sim_switch_tip">Táto SIM je nastavená ako východzia pre %s. Pre zmenu SIM podržte a stiahnite stavový riadok.</string>
 <string name="remind_next_time">Pripomenúť neskôr</string>
-<string name="voice_call_service">služby hlasových hovorov</string>
-<string name="messages_service">služby správ</string>
-<string name="data_connection_service">služby dát</string>
+<string name="voice_call_service">Služby hlasových hovorov</string>
+<string name="messages_service">Služby správ</string>
+<string name="data_connection_service">Služby dát</string>
 <string name="wifi">Wifi</string>
 <string name="bluetooth">Bluetooth</string>
 <string name="mobile">Dátové spojenie</string>
@@ -200,43 +200,43 @@ Používajte iba nabíjačku, ktorá bola dodaná spolu so zariadením."</string
 <string name="title_toggle_screencapture">Snímok obr.</string>
 <string name="title_qr_code">QR kód</string>
 <string name="title_nightmode">Nočný režim</string>
-<string name="switchwidgetsettings_title">Nastavenie umiesnenia prepínača</string>
-<string name="switchwidgetsettings_switch_title">Nastavenia stavového riadku</string>
-<string name="switchwidgetsettings_switch_on">otvoriť</string>
-<string name="switchwidgetsettings_switch_off">zavrieť</string>
-<string name="switchwidgetsettings_notice_title">Je možné umiestniť len 10 prepínačov</string>
+<string name="switchwidgetsettings_title">Vybrať prepínače do lišty</string>
+<string name="switchwidgetsettings_switch_title">Nastavenia notifikačnej lišty</string>
+<string name="switchwidgetsettings_switch_on">Otvoriť</string>
+<string name="switchwidgetsettings_switch_off">Zavrieť</string>
+<string name="switchwidgetsettings_notice_title">Je možné vybrať len 10 prepínačov</string>
 <string name="twelve_hour_time_format_nopm">h:mm</string>
-<string name="statusbarsettings">Nastavenia stavového riadku</string>
+<string name="statusbarsettings">Nastavenia notifikačnej lišty</string>
 <string name="today_usage">Dnes:</string>
 <string name="month_left_usage">Zostavá:</string>
 <string name="double_statusbar_setting">Dvojitý stavový riadok</string>
-<string name="settings_double_status">stav stavového riadku</string>
-<string name="widget_setting">Upraviť umiestnenie stavového riadku</string>
+<string name="settings_double_status">Stav stavového riadku</string>
+<string name="widget_setting">Vybrať prepínače umiestnené do lišty</string>
 <string name="usagedata_setting">Zobraziť využitie dát</string>
 <string name="netspeed_setting">Zobraziť rýchlosť siete</string>
-<string name="settings_disusagedata">nevyužité dáta</string>
+<string name="settings_disusagedata">Nevyužité dáta</string>
 <string name="recent_totalmem">Celková pamäť:</string>
 <string name="recent_usedmem">Využitá pamäť:</string>
 <string name="phonestatusbarsettings_title">Nastavania pozície prepínača</string>
 <string name="trans_statusbar_setting">Priehľadný stavový riadok</string>
 <string name="trans_statusbar_key">trans_statusbar_key</string>
-<string name="notifilter_header">preventívne oznamovať</string>
-<string name="notifilter_tail">preventívne neoznamovať</string>
-<string name="notifilter_setting">Nastavenia oznámení</string>
-<string name="notifilter_activity_title">Nastavenia oznámení</string>
+<string name="notifilter_header">Preventívne oznamovať</string>
+<string name="notifilter_tail">Preventívne neoznamovať</string>
+<string name="notifilter_setting">Nastavenia notifikácií</string>
+<string name="notifilter_activity_title">Nastavenia notifikácií</string>
 <string name="power_battery_fulltitle">Nabíjanie batérie</string>
 <string name="power_battery_full">Nabíjanie ukončené, odpojte nabíjačku</string>
-<string name="lockscreen_expanded">rozšíriteľné pri režime celej obrazovky</string>
-<string name="lockscreen_expanded_comman">pracuje len pri odomknutej klávesnici</string>
+<string name="lockscreen_expanded">Rozšíriteľné pri režime celej obrazovky</string>
+<string name="lockscreen_expanded_comman">Pracuje len pri odomknutej klávesnici</string>
 <string name="title_toggle_gemini_data">Dátová karta</string>
 <string name="recent_meminfo">%1$dM/%2$dM</string>
 <string name="recent_noapp">Žiadne nové aplikácie</string>
-<string name="notifilter_cloud">Cloud blokovania oznámení</string>
+<string name="notifilter_cloud">Blokovať notifikácie aplikácií</string>
 <string name="notifilter_addtoblack">Pridať na čiernu listinu</string>
 <string name="notifilter_del">Vymazať z čiernej listiny</string>
 <string name="notifilter_allow">Povoliť</string>
 <string name="notifilter_denie">Zakázať</string>
-<string name="notifilter_headernotice">Oznámenia boli zakázané</string>
+<string name="notifilter_headernotice">x zakázaná notifikácia</string>
 <string name="notifilter_item_activity">Správca oznámení</string>
 <string name="notifilter_cloudloading">Načítanie cloudu...</string>
 <string name="notifilter_cloudlasttime">Čas posledného prebratia:</string>
