--- a/main/PIM.apk/res/values-sk/strings.xml
+++ b/main/PIM.apk/res/values-sk/strings.xml
@@ -1291,7 +1291,7 @@ Opakované odoslanie..."</string>
 <string name="label_mmsframent">Správy</string>
 <string name="label_calllogframent">Hovor</string>
 <string name="label_updatefragment">aktualizácia Detailu</string>
-<string name="label_loaderframents">Informácia kontaktu</string>
+<string name="label_loaderframents">Kontakty</string>
 <string name="label_calllog">Register hovorov</string>
 <string name="label_allcontacts">Všetky kontakty</string>
 <string name="label_mms">SMS</string>
@@ -1558,7 +1558,7 @@ In four, the opening of free information service needs to send a message to the 
 <string name="dlg_title_ippref_notset">Neotvorené IP vytáčanie</string>
 <string name="dlg_msg_ippref_tosetting">Pre otvorenie IP vytáčania!</string>
 <string name="ipsetting_no_sim_card">Nie je karta SIM, nemožno nastaviť IP vytáčanie</string>
-<string name="hint_findAllContacts">Vyhľadať%skontaktov</string>
+<string name="hint_findAllContacts">Vyhľadať z %s kontaktov</string>
 <string name="company_info">Informácie o spoločnosti</string>
 <string name="group_entry_item">Skupina kontaktov</string>
 </resources>
