--- a/main/ContactsProvider.apk/res/values-cs/strings.xml
+++ b/main/ContactsProvider.apk/res/values-cs/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
+<resources>
     <string name="unknown">Neznámý</string>
     <string name="sharedUserLabel">Android jádra aplikace</string>
     <string name="app_label">Ukládání kontaktů</string>
